Fix asset imports for build

--- a/src/styles/views/_index.scss
+++ b/src/styles/views/_index.scss
@@ -76,7 +76,7 @@
 .secondary-hero {
   margin-top: 6rem;
   height: 560px;
-  background-image: url("../../assets/home/mobile/image-small-team.jpg");
+  background-image: url("assets/home/mobile/image-small-team.jpg");
 }
 
 .secondary-hero .hero-content button {
@@ -106,13 +106,13 @@
 }
 
 .featured-card.featured-1 {
-  background-image: url("../../assets/portfolio/mobile/image-del-sol.jpg");
+  background-image: url("assets/portfolio/mobile/image-del-sol.jpg");
 }
 .featured-card.featured-2 {
-  background-image: url("../../assets/portfolio/mobile/image-228b.jpg");
+  background-image: url("assets/portfolio/mobile/image-228b.jpg");
 }
 .featured-card.featured-3 {
-  background-image: url("../../assets/portfolio/mobile/image-prototype.jpg");
+  background-image: url("assets/portfolio/mobile/image-prototype.jpg");
 }
 
 .featured-card h1 {
@@ -144,7 +144,7 @@
   }
 
   .primary-hero {
-    background-image: url("../../assets/home/tablet/image-hero-paramour.jpg");
+    background-image: url("assets/home/tablet/image-hero-paramour.jpg");
   }
 
   .primary-hero .hero-description {
@@ -162,7 +162,7 @@
   }
 
   .secondary-hero {
-    background-image: url("../../assets/home/tablet/image-small-team.jpg");
+    background-image: url("assets/home/tablet/image-small-team.jpg");
   }
 
   .secondary-hero .hero-content h1 {
@@ -176,13 +176,13 @@
   }
 
   .featured-card.featured-1 {
-    background-image: url("../../assets/portfolio/tablet/image-del-sol.jpg");
+    background-image: url("assets/portfolio/tablet/image-del-sol.jpg");
   }
   .featured-card.featured-2 {
-    background-image: url("../../assets/portfolio/tablet/image-228b.jpg");
+    background-image: url("assets/portfolio/tablet/image-228b.jpg");
   }
   .featured-card.featured-3 {
-    background-image: url("../../assets/portfolio/tablet/image-prototype.jpg");
+    background-image: url("assets/portfolio/tablet/image-prototype.jpg");
   }
 
   .featured-card h1 {
@@ -251,11 +251,11 @@
     width: 350px;
     height: 568px;
     display: inline;
-    background-image: url("../../assets/home/desktop/image-welcome.jpg");
+    background-image: url("assets/home/desktop/image-welcome.jpg");
   }
 
   .secondary-hero {
-    background-image: url("../../assets/home/desktop/image-small-team.jpg");
+    background-image: url("assets/home/desktop/image-small-team.jpg");
     background-size: cover;
   }
 
@@ -274,12 +274,12 @@
   }
 
   .featured-card.featured-1 {
-    background-image: url("../../assets/portfolio/desktop/image-del-sol.jpg");
+    background-image: url("assets/portfolio/desktop/image-del-sol.jpg");
   }
   .featured-card.featured-2 {
-    background-image: url("../../assets/portfolio/desktop/image-228b.jpg");
+    background-image: url("assets/portfolio/desktop/image-228b.jpg");
   }
   .featured-card.featured-3 {
-    background-image: url("../../assets/portfolio/desktop/image-prototype.jpg");
+    background-image: url("assets/portfolio/desktop/image-prototype.jpg");
   }
 }
