Refactor .container-no-padding utility class
- use padding specified in Figma desisgn

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -1,23 +1,23 @@
 @import "../mixins";
 @import "../variables";
 
+$default-padding-tablet: 97px;
+$default-padding-desktop: 165px;
+
 .container {
   padding: 0 2rem;
   width: 100%;
   box-sizing: border-box;
 }
 
-.container-no-padding {
+.container-no-padding-sm {
   @extend .container;
-  padding: 0;
-}
-
-.container-no-padding {
   padding: 0;
 }
 
 @include tablet {
   .container {
-    padding: 0 $left-right-container-margin;
+    padding-left: $default-padding-tablet;
+    padding-right: $default-padding-tablet;
   }
 }
