--- a/src/styles/views/_index.scss
+++ b/src/styles/views/_index.scss
@@ -8,6 +8,7 @@
 
 .hero-dark-overlay {
   position: absolute;
+  left: 0;
   height: 100%;
   width: 100%;
   background-color: #1b1d235e;
@@ -15,7 +16,7 @@
 
 .primary-hero {
   height: 600px;
-  // background-image: url("../../assets/home/mobile/image-hero-paramour.jpg");
+  position: relative;
   background-image: url("assets/home/mobile/image-hero-paramour.jpg");
   background-size: cover;
 }
@@ -139,10 +140,6 @@
 }
 
 @include tablet {
-  .hero {
-    margin: 0 $left-right-container-margin;
-  }
-
   .primary-hero {
     background-image: url("assets/home/tablet/image-hero-paramour.jpg");
   }
