--- a/src/style.scss
+++ b/src/style.scss
@@ -18,6 +18,7 @@ p {
 @import "./styles/components/buttons";
 @import "./styles/components/container";
 @import "./styles/components/navbar";
+@import "./styles/components/footer";
 @import "./styles/components/breadcrumbs";
 
 // VIEWS  ===========================
