--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -5,7 +5,7 @@
 }
 
 .button {
-  padding: 12px 2rem;
+  padding: 23.5px 25px;
   width: fit-content;
   display: flex;
   align-items: center;
@@ -21,6 +21,8 @@
 
 .button p {
   font-weight: 800;
+  font-size: 15px;
+  line-height: 25px;
 }
 
 .button i {
