--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -5,7 +5,7 @@ $default-padding-tablet: 97px;
 $default-padding-desktop: 165px;
 
 .container {
-  padding: 0 2rem;
+  padding: 0 32px;
   width: 100%;
   box-sizing: border-box;
 }
