Add all linkable element

--- a/src/styles/components/_breadcrumbs.scss
+++ b/src/styles/components/_breadcrumbs.scss
@@ -11,7 +11,7 @@
     position: fixed;
     z-index: 200;
     top: 79px;
-    left: -1.5rem;
+    left: -45px;
     display: flex;
     align-items: center;
     transform: rotate(90deg);
