--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,10 @@ p {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 @import "./styles/typography";
 @import "./styles/colors";
 @import "./styles/mixins";
