--- a/src/styles/views/_index.scss
+++ b/src/styles/views/_index.scss
@@ -114,6 +114,16 @@
   position: relative;
 }
 
+.featured-card.featured-1 {
+  background-image: url("assets/portfolio/mobile/image-del-sol.jpg");
+}
+.featured-card.featured-2 {
+  background-image: url("assets/portfolio/mobile/image-228b.jpg");
+}
+.featured-card.featured-3 {
+  background-image: url("assets/portfolio/mobile/image-prototype.jpg");
+}
+
 .featured-card h1 {
   display: none;
 }
