Add padding to links

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -75,6 +75,10 @@ $element-margin-top-sm: 32px;
   }
 }
 
+.footer-main-container li a {
+  padding: 12px 0;
+}
+
 .footer-button-container {
   margin-top: $element-margin-top-sm;
 
