--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -43,6 +43,10 @@ $navbar-height: 92px;
     list-style: none;
     font-weight: bold;
   }
+
+  li a {
+    padding: 14px 0;
+  }
 }
 
 .animate-menu {
