Remove index.scss as default import for every page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
-@import "../mixins";
-@import "../colors";
+@import "mixins";
+@import "colors";
 
 .hero-dark-overlay {
   position: absolute;
@@ -13,7 +13,7 @@
   margin-top: 92px;
   min-height: 600px;
   position: relative;
-  background-image: url("assets/home/mobile/image-hero-paramour.jpg");
+  background-image: url("../assets/home/mobile/image-hero-paramour.jpg");
   background-size: cover;
 }
 
@@ -67,7 +67,7 @@
 .secondary-hero {
   margin-top: 6rem;
   height: 560px;
-  background-image: url("assets/home/mobile/image-small-team.jpg");
+  background-image: url("../assets/home/mobile/image-small-team.jpg");
   background-size: cover;
   background-position: center center;
   position: relative;
@@ -115,13 +115,13 @@
 }
 
 .featured-card.featured-1 {
-  background-image: url("assets/portfolio/mobile/image-del-sol.jpg");
+  background-image: url("../assets/portfolio/mobile/image-del-sol.jpg");
 }
 .featured-card.featured-2 {
-  background-image: url("assets/portfolio/mobile/image-228b.jpg");
+  background-image: url("../assets/portfolio/mobile/image-228b.jpg");
 }
 .featured-card.featured-3 {
-  background-image: url("assets/portfolio/mobile/image-prototype.jpg");
+  background-image: url("../assets/portfolio/mobile/image-prototype.jpg");
 }
 
 .featured-card h1 {
@@ -178,7 +178,7 @@
   }
 
   .secondary-hero {
-    background-image: url("assets/home/tablet/image-small-team.jpg");
+    background-image: url("../assets/home/tablet/image-small-team.jpg");
   }
 
   .secondary-hero .hero-content h1 {
@@ -192,13 +192,13 @@
   }
 
   .featured-card.featured-1 {
-    background-image: url("assets/portfolio/tablet/image-del-sol.jpg");
+    background-image: url("../assets/portfolio/tablet/image-del-sol.jpg");
   }
   .featured-card.featured-2 {
-    background-image: url("assets/portfolio/tablet/image-228b.jpg");
+    background-image: url("../assets/portfolio/tablet/image-228b.jpg");
   }
   .featured-card.featured-3 {
-    background-image: url("assets/portfolio/tablet/image-prototype.jpg");
+    background-image: url("../assets/portfolio/tablet/image-prototype.jpg");
   }
 
   .featured-card h1 {
@@ -226,7 +226,7 @@
 
 @include desktop {
   .primary-hero {
-    background-image: url("assets/home/desktop/image-hero-paramour.jpg");
+    background-image: url("../assets/home/desktop/image-hero-paramour.jpg");
   }
 
   .hero-content {
@@ -268,11 +268,11 @@
     width: 350px;
     height: 568px;
     display: inline;
-    background-image: url("assets/home/desktop/image-welcome.jpg");
+    background-image: url("../assets/home/desktop/image-welcome.jpg");
   }
 
   .secondary-hero {
-    background-image: url("assets/home/desktop/image-small-team.jpg");
+    background-image: url("../assets/home/desktop/image-small-team.jpg");
     background-size: cover;
   }
 
@@ -291,12 +291,12 @@
   }
 
   .featured-card.featured-1 {
-    background-image: url("assets/portfolio/desktop/image-del-sol.jpg");
+    background-image: url("../assets/portfolio/desktop/image-del-sol.jpg");
   }
   .featured-card.featured-2 {
-    background-image: url("assets/portfolio/desktop/image-228b.jpg");
+    background-image: url("../assets/portfolio/desktop/image-228b.jpg");
   }
   .featured-card.featured-3 {
-    background-image: url("assets/portfolio/desktop/image-prototype.jpg");
+    background-image: url("../assets/portfolio/desktop/image-prototype.jpg");
   }
 }
