--- a/src/pages/about-us.scss
+++ b/src/pages/about-us.scss
@@ -5,14 +5,38 @@
 
 .portfolio {
   margin-top: $navbar-height * 2;
+  margin-bottom: $navbar-height;
   @include tablet {
     margin-top: 0;
+  }
+
+  @include desktop {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
 .portfolio-card {
   position: relative;
   height: 240px;
+  background-size: cover;
+  background-position: center center;
+
+  @include desktop {
+    width: 350px;
+    height: 560px;
+  }
+}
+
+.portfolio-card:not(:first-child) {
+  margin-top: 24px;
+}
+
+.portfolio-card:first-child {
+  @include desktop {
+    margin-top: 24px;
+  }
 }
 
 .portfolio-card .linear-overlay {
@@ -32,8 +56,4 @@
   color: white;
   bottom: 2rem;
   left: 2rem;
-}
-
-.portfolio-card-1 {
-  background-image: url("../assets/portfolio/mobile/image-seraph.jpg");
 }
