Refactor breadcrumb positioning
- move origin to top-left so that breadcrumb `left` position does not change based on parent width.

NOTE: breadcrumb text is not always the same width across all pages, i.e 'home', 'about-us'

--- a/src/styles/components/_breadcrumbs.scss
+++ b/src/styles/components/_breadcrumbs.scss
@@ -10,11 +10,12 @@
     display: initial;
     position: fixed;
     z-index: 200;
-    top: 79px;
-    left: -45px;
+    top: 0px;
+    left: 67px;
     display: flex;
     align-items: center;
     transform: rotate(90deg);
+    transform-origin: top left;
   }
 
   .breadcrumb-line {
