Fix .primary-hero asset link for tablet media size

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -150,7 +150,7 @@
 @include tablet {
   .primary-hero {
     margin-top: 0;
-    background-image: url("assets/home/tablet/image-hero-paramour.jpg");
+    background-image: url("../assets/home/tablet/image-hero-paramour.jpg");
   }
 
   .primary-hero .hero-description {
