Add primary hero to /contact

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,6 +17,7 @@ a {
 @import "./styles/typography";
 @import "./styles/colors";
 @import "./styles/mixins";
+@import "./styles/utility";
 
 // COMPONENTS  ===========================
 @import "./styles/components/buttons";
