--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -29,9 +29,15 @@ body {
 
 .h2 {
   font-weight: $font-weight-bold;
-  font-size: 56px;
-  line-height: 56px;
-  letter-spacing: -2px;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: -1px;
+
+  @include tablet {
+    font-size: 56px;
+    line-height: 56px;
+    letter-spacing: -2px;
+  }
 }
 
 .h3 {
