Move index.scss to more suitable place in file structure

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
-@import "mixins";
-@import "colors";
-@import "variables";
+@import "./styles/mixins";
+@import "./styles/colors";
+@import "./styles/variables";
 
 .primary-hero {
   margin-top: $navbar-height;
