HOTFIX fix image urls for /index.html

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
   margin-top: $navbar-height;
   min-height: 600px;
   position: relative;
-  background-image: url("../assets/home/mobile/image-hero-paramour.jpg");
+  background-image: url("./assets/home/mobile/image-hero-paramour.jpg");
   background-size: cover;
 }
 
@@ -60,7 +60,7 @@
 .secondary-hero {
   margin-top: 6rem;
   height: 560px;
-  background-image: url("../assets/home/mobile/image-small-team.jpg");
+  background-image: url("./assets/home/mobile/image-small-team.jpg");
   background-size: cover;
   background-position: center center;
   position: relative;
@@ -108,13 +108,13 @@
 }
 
 .featured-card.featured-1 {
-  background-image: url("../assets/portfolio/mobile/image-del-sol.jpg");
+  background-image: url("./assets/portfolio/mobile/image-del-sol.jpg");
 }
 .featured-card.featured-2 {
-  background-image: url("../assets/portfolio/mobile/image-228b.jpg");
+  background-image: url("./assets/portfolio/mobile/image-228b.jpg");
 }
 .featured-card.featured-3 {
-  background-image: url("../assets/portfolio/mobile/image-prototype.jpg");
+  background-image: url("./assets/portfolio/mobile/image-prototype.jpg");
 }
 
 .featured-card h1 {
@@ -143,7 +143,7 @@
 @include tablet {
   .primary-hero {
     margin-top: 0;
-    background-image: url("../assets/home/tablet/image-hero-paramour.jpg");
+    background-image: url("./assets/home/tablet/image-hero-paramour.jpg");
   }
 
   .primary-hero .hero-description {
@@ -171,7 +171,7 @@
   }
 
   .secondary-hero {
-    background-image: url("../assets/home/tablet/image-small-team.jpg");
+    background-image: url("./assets/home/tablet/image-small-team.jpg");
   }
 
   .secondary-hero .hero-content h1 {
@@ -185,13 +185,13 @@
   }
 
   .featured-card.featured-1 {
-    background-image: url("../assets/portfolio/tablet/image-del-sol.jpg");
+    background-image: url("./assets/portfolio/tablet/image-del-sol.jpg");
   }
   .featured-card.featured-2 {
-    background-image: url("../assets/portfolio/tablet/image-228b.jpg");
+    background-image: url("./assets/portfolio/tablet/image-228b.jpg");
   }
   .featured-card.featured-3 {
-    background-image: url("../assets/portfolio/tablet/image-prototype.jpg");
+    background-image: url("./assets/portfolio/tablet/image-prototype.jpg");
   }
 
   .featured-card h1 {
@@ -219,7 +219,7 @@
 
 @include desktop {
   .primary-hero {
-    background-image: url("../assets/home/desktop/image-hero-paramour.jpg");
+    background-image: url("./assets/home/desktop/image-hero-paramour.jpg");
   }
 
   .hero-content {
@@ -261,11 +261,11 @@
     width: 350px;
     height: 568px;
     display: inline;
-    background-image: url("../assets/home/desktop/image-welcome.jpg");
+    background-image: url("./assets/home/desktop/image-welcome.jpg");
   }
 
   .secondary-hero {
-    background-image: url("../assets/home/desktop/image-small-team.jpg");
+    background-image: url("./assets/home/desktop/image-small-team.jpg");
     background-size: cover;
   }
 
@@ -284,12 +284,12 @@
   }
 
   .featured-card.featured-1 {
-    background-image: url("../assets/portfolio/desktop/image-del-sol.jpg");
+    background-image: url("./assets/portfolio/desktop/image-del-sol.jpg");
   }
   .featured-card.featured-2 {
-    background-image: url("../assets/portfolio/desktop/image-228b.jpg");
+    background-image: url("./assets/portfolio/desktop/image-228b.jpg");
   }
   .featured-card.featured-3 {
-    background-image: url("../assets/portfolio/desktop/image-prototype.jpg");
+    background-image: url("./assets/portfolio/desktop/image-prototype.jpg");
   }
 }
