Extract picture-full-width-centered  as compoent

--- a/src/main.scss
+++ b/src/main.scss
@@ -25,6 +25,7 @@ a {
 @import "./styles/components/navbar";
 @import "./styles/components/footer";
 @import "./styles/components/breadcrumbs";
+@import "./styles/components/picture";
 
 .anchor-padding-top-bottom {
   padding: 12px 0;
