--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors";
 @import "../../styles/variables";
 @import "../../styles/mixins";
-@import "../../styles//utility";
+@import "../../styles/utility";
 
 // UTILITY CLASSES ========================================
 
@@ -13,15 +13,6 @@
   top: -70px;
   left: 0;
   background-color: $light-grey;
-}
-
-.picture-full-width-centered {
-  display: flex;
-}
-
-.picture-full-width-centered img {
-  width: 100%;
-  object-fit: cover;
 }
 
 // CONTACT INTRO ========================================
