--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "./styles/mixins";
 @import "./styles/colors";
 @import "./styles/variables";
+@import "../node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
 ul {
   margin: 0;
@@ -9,6 +10,16 @@ ul {
 
 .glide__slide {
   position: relative;
+}
+
+.glide__bullet--active {
+  background-color: $very-dark-blue;
+  color: white;
+
+  &:hover {
+    background-color: $very-dark-blue;
+    color: white;
+  }
 }
 
 .primary-hero {
@@ -236,7 +247,7 @@ ul {
     position: absolute;
     z-index: 100;
     bottom: 0;
-    left: 17px;
+    left: -80px;
   }
 
   .welcome .welcome-large-text {
